# bone

./: .clang-format  .travis.yml  bone.rb  embed.rb  ffi.rb  mdtest.sh  plugin.rb  readme.md  setup_sln.rb
doc/: blt.md  build.md  embed.md  interactive.md  mdtest.sh  path.md  platform.md  plugin.md  spec.md  style.md  test.md  trick.md
src/: .gitignore  CMakeLists.txt  Doxyfile  buildall.rb  collect.rb  enc.sh  prefix.rb  upcase.rb  utest.bash  utest.sh
src/app/: main.c
src/bone/: bone.h  config.c  config.h.in  cunit.h  glib.h  main.c  test.c  test.h
src/bone/il/: compile_cache.c  compile_cache.h  il_expr_all.h  il_expr_array_lit.c  il_expr_array_lit.h  il_expr_array_subscript.c  il_expr_array_subscript.h  il_expr_binop.c  il_expr_binop.h  il_expr_char.c  il_expr_char.h  il_expr_double.c  il_expr_double.h  il_expr_funccallop.c  il_expr_funccallop.h  il_expr_int.c  il_expr_int.h  il_expr_lambda.c  il_expr_lambda.h  il_expr_memberop.c  il_expr_memberop.h  il_expr_object_injection.c  il_expr_object_injection.h  il_expr_string.c  il_expr_string.h  il_expr_uop.c  il_expr_uop.h  il_expr_variable.c  il_expr_variable.h  il_expression.c  il_expression.h  il_lineno.c  il_lineno.h  il_statement.c  il_statement.h  il_stmt_all.h  il_stmt_defer.c  il_stmt_defer.h  il_stmt_expr_stmt.c  il_stmt_expr_stmt.h  (+12 more)
src/bone/parse/: .gitignore  ast.c  ast.h  ast2il.c  ast2il.h  bone.l  bone.tab.c  bone.tab.h  bone.y  gen.sh  lex.yy.c  parser.c  parser.h
src/bone/runtime/: any.c  any.h  array.c  array.h  bool.c  bool.h  char.c  char.h  double.c  double.h  enviroment.c  enviroment.h  extern.c  extern.h  frame.c  frame.h  heap.c  heap.h  integer.c  integer.h  interactive.c  interactive.h  interpreter.c  interpreter.h  keyword.h  label.c  label.h  lambda.c  lambda.h  line_range.c  line_range.h  module.c  module.h  object.c  object.h  opcode.c  opcode.h  snapshot.c  snapshot.h  std.c  (+7 more)
src/bone/util/: args.c  args.h  fmt.c  fmt.h  getline.c  getline.h  io.c  io.h  jump_stack.c  jump_stack.h  memory.c  memory.h  stack.c  stack.h  string.c  string.h  string_pool.c  string_pool.h  string_util.c  string_util.h  winglib.c  winglib.h
template/: func.txt  funcc.txt  il.txt
